force-app/main/default/objects/Estimates__c/Estimates__c.object-meta.xml
<CustomObject>
    <description>This object stores the patient and insurance responsibility calculated via cost of calculator.</description>
    <label>Estimates</label>
    <nameField>
        <displayFormat>Est-{0000}</displayFormat>
        <label>Estimates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Estimates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>