force-app/main/default/objects/Estimates__c/fields/Benefit_Description__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Description__c</fullName>
    <label>Benefit Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30 = Health Benefit Plan Coverage</fullName>
            </value>
            <value>
                <fullName>AI = Substance Abuse</fullName>
            </value>
            <value>
                <fullName>CI = Substance Abuse Facility - Inpatient</fullName>
            </value>
            <value>
                <fullName>CJ = Substance Abuse Facility - Outpatient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>