force-app/main/default/objects/Estimates__c/fields/Benefit_level__c.field-meta.xml
<CustomField>
    <fullName>Benefit_level__c</fullName>
    <label>Benefit level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>