force-app/main/default/objects/Estimates__c/fields/Co_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Co_Insurance__c</fullName>
    <label>Co-Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>