force-app/main/default/objects/Estimates__c/fields/Insurance_Name__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Name__c</fullName>
    <label>Insurance Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>