force-app/main/default/objects/Estimates__c/fields/Insurer_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Insurer_Responsibility__c</fullName>
    <label>Insurer Responsibility</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>