force-app/main/default/objects/Estimates__c/fields/OOP_Max__c.field-meta.xml
<CustomField>
    <fullName>OOP_Max__c</fullName>
    <label>OOP Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>