force-app/main/default/objects/Estimates__c/fields/Patient_responsibility__c.field-meta.xml
<CustomField>
    <fullName>Patient_responsibility__c</fullName>
    <label>Patient responsibility</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>