force-app/main/default/objects/Estimates__c/fields/Procedure_Total__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Total__c</fullName>
    <label>Procedure Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>