force-app/main/default/objects/Estimates__c/fields/Type_of_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Insurance__c</fullName>
    <label>Type of Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary Insurance</fullName>
            </value>
            <value>
                <fullName>Secondary Insurance</fullName>
            </value>
            <value>
                <fullName>Tertiary Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>